Got an initial Qt window on screen, next get the window able to read in and display an input image map, populate the input combo box

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,4 +6,11 @@ project (ImageMapGenerator)
 
 find_package(Qt5 COMPONENTS Core Widgets REQUIRED)
 
+# Tell CMake to run moc when necessary:
+set(CMAKE_AUTOMOC ON)
+set(CMAKE_AUTOUIC ON)
+
+set(CMAKE_INCLUDE_CURRENT_DIR ON)
+
+
 add_subdirectory(source)
